--- a/librum.csproj
+++ b/librum.csproj
@@ -3,6 +3,8 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
+    <RootNamespace>Librum</RootNamespace>
+    <AssemblyName>Librum</AssemblyName>
   </PropertyGroup>
 
 
