--- a/Librum/Dockerfile
+++ b/Librum/Dockerfile
@@ -13,4 +13,7 @@ RUN dotnet publish -c Release -o out
 FROM microsoft/dotnet:aspnetcore-runtime
 WORKDIR /app
 COPY --from=build-env /app/out .
-ENTRYPOINT ["dotnet", "aspnetapp.dll"]
+
+EXPOSE 80 5000
+
+ENTRYPOINT ["dotnet", "Librum.dll"]
