--- a/Librum/librum.csproj
+++ b/Librum/librum.csproj
@@ -15,7 +15,7 @@
     <PackageReference Include="Microsoft.Web.LibraryManager.Build" Version="1.0.172" />
     <PackageReference Include="PaulMiami.AspNetCore.Mvc.Recaptcha" Version="1.2.1" />
     <PackageReference Include="QRCoder" Version="1.3.3" />
-    <PackageReference Include="Slugify" Version="0.1.0.20570" />
+    <PackageReference Include="Slugify.Core" Version="2.3.0" />
     <PackageReference Include="Westwind.AspNetCore.Markdown" Version="3.2.2" />
     <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
     <PackageReference Include="GravatarHelper.AspNetCore" Version="1.0.0" />
