--- a/Librum/Dockerfile
+++ b/Librum/Dockerfile
@@ -1,19 +1,19 @@
-FROM microsoft/dotnet:sdk AS build-env
-
-MAINTAINER Clint.Network <me@clint.network>
-
+FROM mcr.microsoft.com/dotnet/core/aspnet:2.2-stretch-slim AS base
 WORKDIR /app
+EXPOSE 80
 
-COPY *.csproj ./
-RUN dotnet restore
+FROM mcr.microsoft.com/dotnet/core/sdk:2.2-stretch AS build
+WORKDIR /src
+COPY ["Librum/librum.csproj", "Librum/"]
+RUN dotnet restore "Librum/librum.csproj"
+COPY . .
+WORKDIR "/src/Librum"
+RUN dotnet build "librum.csproj" -c Release -o /app
 
-COPY . ./
-RUN dotnet publish -c Release -o out
+FROM build AS publish
+RUN dotnet publish "librum.csproj" -c Release -o /app
 
-FROM microsoft/dotnet:aspnetcore-runtime
+FROM base AS final
 WORKDIR /app
-COPY --from=build-env /app/out .
-
-EXPOSE 80 5000
-
+COPY --from=publish /app .
 ENTRYPOINT ["dotnet", "Librum.dll"]
